--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 /media
+**/migrations/
+*/migrations/
+**/migrations/*.py
+**/migrations/*.pyc
 
 # Flask stuff:
 instance/
