--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ environs==11.0.0
 et_xmlfile==2.0.0
 idna==3.10
 marshmallow==3.23.0
-numpy==2.3.0
+# numpy==2.3.0
 openpyxl==3.1.5
 packaging==24.1
-pandas==2.3.0
+# pandas==2.3.0
 paystackapi==2.1.3
 pillow==11.0.0
 pycparser==2.22
